test/error/E21.chigfn
{
	"type": "function",
	"name": "helloworld",
	"description": "Prints Hello World",
	"data_inputs": [],
	"data_outputs": [],
	"exec_inputs": [""],
	"exec_outputs": [""],
	"nodes": {
		"if": {
			"type": "lang:if",
			"data": {},
			"location": [2, 2]
		}
	},
	"connections": [
		{
			"type": "exec",
			"input": ["if", 0],
			"output": ["nope not here!", 0]
		}
	],
	"local_variables": {}
}
